--- a/build.gradle
+++ b/build.gradle
@@ -1,21 +1,28 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
-task wrapper(type: Wrapper) {
-    gradleVersion = '2.2.1' 
-}
+//task wrapper(type: Wrapper) {
+//    gradleVersion = '2.2.2'
+//}
 
 buildscript {
     repositories {
+        maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
         mavenCentral()
+        google()
+        jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.1.2'
-        classpath 'com.jakewharton.sdkmanager:gradle-plugin:0.10.+'
+        classpath 'com.android.tools.build:gradle:3.5.0'
+//        classpath 'com.jakewharton.sdkmanager:gradle-plugin:0.10.+'
     }
 }
 
 allprojects {
     repositories {
+        maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
+        google()
+        jcenter()
         mavenCentral()
+        maven { url "https://jitpack.io" }
     }
 }
